# FalconPM

./: .gitmodules  ARCHITECTURE.md  CMakeLists.txt  README.md  ROADMAP.md  SPONSOR.md  notepad.txt  setup.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: config.yml  ✨feature-request.md  🐞-bug-report.md
base/: falconpm.c  fpm_graph.c  fpm_route.c
db/: atcommand.yml  fpm_portals.txt
db/gat/: 1@vrsn.gat  bossnia_1a.gat  mid_campin.gat  ve_fild02.gat  yuno.gat
docs/: FEATURES.md  developingplugins.md  unlock.md  unlockitems.txt
npc/: falconpm_manager.txt
plugins/: autocombat.c  autoloot.c  autoroute.c  autostorage.c  logging.c  plugin_api.hpp  plugin_autocombat.c  plugin_autopots.c  plugin_autosupport.c  status.c
src/AI/: peregrine_ai.c  peregrine_ai.h  peregrine_gat.h  peregrine_path.c  peregrine_path.h
src/AI/hunter/: CMakeLists.txt  hnt_api.cpp  hnt_api.h  hnt_state.h  hnt_task.cpp  hnt_task.h  hunter.cpp  hunter.h
src/AI/lanner/: CMakeLists.txt  lanner.cpp  lnr_api.cpp  lnr_api.h  lnr_skills.cpp  lnr_state.h
src/AI/merlin/: CMakeLists.txt  merlin.cpp  merlin.h  mln_api.c  mln_api.h  mln_attack.c  mln_attack.cpp  mln_attack.h  mln_target.c  mln_target.h
src/AI/peregrine/: CMakeLists.txt  peregrine.cpp  peregrine.h  pgn_api.c  pgn_api.h  pgn_gat.c  pgn_path.c  pgn_path.h
src/AI/saker/: skr_conf.cpp  skr_conf.h
src/AI/taita/: tai_api.c  tai_api.h  tai_loot.c  tai_loot.h  tai_target.c  tai_target.h  taita.cpp
src/AI/tests/: main_gat_test.c  main_path_test.c
src/bridge/: CMakeLists.txt  CMakelist.txt  falconpm_bootstrap.cpp  falconpm_bootstrap.hpp  peregrine.cpp
src/core/: CMakeLists.txt  falconpm.c  falconpm.cpp  falconpm.hpp  fpm_graph.c  fpm_graph.h  fpm_menu.cpp  fpm_path.c  fpm_path.h  fpm_portals.c  fpm_route.c  fpm_tick.cpp  fpm_tick.h  skr_conf.cpp
src/infra/: CMakeLists.txt  falconpm_loader.h  loader.cpp  plugin_api.h  plugin_api.hpp
src/map/: falcon_simp.cpp  main.cpp  map.cpp_back
src/plugins/: CMakeLists.txt  autocombat.c  autoroute.cpp  autostorage.c  hello_plugin.c  logging.c  overseer.cpp  partysupport.c  randomwalk.c
src/plugins/autoattack/: autoattack.cpp  autoattack_conf.cpp  autoattack_globals.h
src/plugins/autoroute/: autoroute.cpp
src/plugins/disabled/: autoloot.c  autoroute.c  status.c
src/plugins/disabled/autoattack/: autoattack.cpp  autoattack_conf.cpp
